--- a/package.json
+++ b/package.json
@@ -43,7 +43,11 @@
     "unplugin-auto-import": "^0.15.1",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.4",
+    "vite-plugin-terminal": "^1.1.0",
     "vitest": "^0.29.1",
     "vue-tsc": "^1.2.0"
-  }
+  },
+  "workspaces": [
+    "./libs/ui"
+  ]
 }
