--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/components": "^9.13.0",
+    "@vueuse/core": "^9.13.0",
     "element-plus": "^2.3.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
