--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,7 @@
     "src/**/*.vue",
     "libs/**/*",
     "components.d.ts",
-    "auto-imports.d.ts"
+    "auto-imports.d.ts",
   ],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
