storybook added and not complated

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,6 +10,7 @@
   ],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
+    "jsx": "react-jsx",
     "composite": true,
     "baseUrl": ".",
     "paths": {
