--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@vueuse/components": "^9.13.0",
@@ -23,9 +25,18 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.21.3",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-vite": "^0.4.2",
+    "@storybook/testing-library": "^0.0.13",
+    "@storybook/vue3": "^6.5.16",
     "@types/jsdom": "^21.1.0",
     "@types/node": "^18.14.2",
+    "@types/react": "^18.0.28",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
@@ -33,9 +44,11 @@
     "@vue/runtime-core": "^3.2.47",
     "@vue/test-utils": "^2.3.0",
     "@vue/tsconfig": "^0.1.3",
+    "babel-loader": "^8.3.0",
     "cypress": "^12.7.0",
     "eslint": "^8.34.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
@@ -47,6 +60,7 @@
     "vite": "^4.1.4",
     "vite-plugin-terminal": "^1.1.0",
     "vitest": "^0.29.1",
+    "vue-loader": "^16.8.3",
     "vue-tsc": "^1.2.0"
   },
   "workspaces": [
