--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
+    "@storybook/addon-styling": "^0.3.1",
     "@storybook/builder-vite": "^0.4.2",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/vue3": "^6.5.16",
@@ -44,6 +45,7 @@
     "@vue/runtime-core": "^3.2.47",
     "@vue/test-utils": "^2.3.0",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.14",
     "babel-loader": "^8.3.0",
     "cypress": "^12.7.0",
     "eslint": "^8.34.0",
@@ -52,8 +54,11 @@
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.1.0",
     "prettier": "^2.8.4",
     "start-server-and-test": "^2.0.0",
+    "tailwindcss": "^3.2.7",
     "typescript": "~4.8.4",
     "unplugin-auto-import": "^0.15.1",
     "unplugin-vue-components": "^0.24.1",
