--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,7 +8,7 @@
     "components.d.ts",
     "auto-imports.d.ts",
   ],
-  "exclude": ["src/**/__tests__/*"],
+  "exclude": ["src/**/__tests__/*","**/*.stories.*"],
   "compilerOptions": {
     "jsx": "react-jsx",
     "composite": true,
