--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/jsdom": "^21.1.0",
     "@types/node": "^18.14.2",
     "@types/react": "^18.0.28",
+    "@vicons/fluent": "^0.12.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
@@ -53,6 +54,7 @@
     "eslint-plugin-storybook": "^0.6.11",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
+    "naive-ui": "^2.34.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.1.0",
@@ -62,6 +64,7 @@
     "typescript": "~4.8.4",
     "unplugin-auto-import": "^0.15.1",
     "unplugin-vue-components": "^0.24.1",
+    "vfonts": "^0.0.3",
     "vite": "^4.1.4",
     "vite-plugin-terminal": "^1.1.0",
     "vitest": "^0.29.1",
