--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,6 +16,11 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["element-plus/global", "vite-plugin-terminal/client", "naive-ui/volar"]
+    "types": [
+      "element-plus/global",
+      "vite-plugin-terminal/client",
+      "naive-ui/volar",
+      "vitest/globals"
+    ]
   }
 }
